ui changes made responsive

--- a/views/main/register.ejs
+++ b/views/main/register.ejs
@@ -19,7 +19,7 @@
     <!-- navbar -->
     <%- include("./../partials/navbar.ejs") %>
         <!-- Navbar End -->
-        <div class="center-text">
+        <div class="form-box">
             <form class="form-signin" method="POST" action="/user/register">
                 <h2 class="form-signin-heading">Please Sign up</h2>
                 <span style="color: rgb(235, 41, 41);font-size: smaller;margin-bottom: 5px;">*All fields are
