--- a/views/main/login.ejs
+++ b/views/main/login.ejs
@@ -19,28 +19,29 @@
     <!-- navbar -->
     <%- include("./../partials/navbar.ejs") %>
         <!-- Navbar End -->
-        <form class="form-signin" method="POST" action="/user/login">
-            <h2 class="form-signin-heading">Please Sign in</h2>
-            <span style="color: rgb(235, 41, 41);font-size: smaller;margin-bottom: 5px;">*All fields are
-                required.</span>
-            <%if(msg){%>
-                <div class="alert alert-warning alert-dismissible fade show" role="alert">
-                    <%=msg%>
-                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
-                </div>
-                <%}%>
-                    <label for="inputEmail" class="sr-only">Username</label>
-                    <input name="username" type="text" id="inputEmail" class="form-control" placeholder="Username"
-                        required autofocus>
-                    <label for="inputPassword" class="sr-only">Password</label>
-                    <input name="password" type="password" id="inputPassword" class="form-control"
-                        placeholder="Password" required style="margin-bottom: 10px;">
-                    <button class="btn btn-lg btn-primary btn-block mb-4" type="submit">Sign in</button>
-                    <ul class="register">New here?<a href="/user/register" class="signup">Sign Up.</a></ul>
-        </form>
-
+        <div class="form-box">
+            <form class="form-signin" method="POST" action="/user/login">
+                <h2 class="form-signin-heading">Please Sign in</h2>
+                <span style="color: rgb(235, 41, 41);font-size: smaller;margin-bottom: 5px;">*All fields are
+                    required.</span>
+                <%if(msg){%>
+                    <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                        <%=msg%>
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                    </div>
+                    <%}%>
+                        <label for="inputEmail" class="sr-only">Username</label>
+                        <input name="username" type="text" id="inputEmail" class="form-control" placeholder="Username"
+                            required autofocus>
+                        <label for="inputPassword" class="sr-only">Password</label>
+                        <input name="password" type="password" id="inputPassword" class="form-control"
+                            placeholder="Password" required style="margin-bottom: 10px;">
+                        <button class="btn btn-lg btn-primary btn-block mb-4" type="submit">Sign in</button>
+                        <ul class="register">New here?<a href="/user/register" class="signup">Sign Up.</a></ul>
+            </form>
+        </div>
 
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
             integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
