--- a/views/main/menu.ejs
+++ b/views/main/menu.ejs
@@ -47,7 +47,7 @@
                     </form>
                     <div class="row">
                         <% for(var i=0; i < m.length; i++) { %>
-                            <div class="card col-4 md-3 " style="width: 18rem;">
+                            <div class="col-sm-12 col-md-6 col-lg-4 col-xs-12" style="width: 18rem;">
                                 <img src="<%=m[i].imagePath%>" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">
