--- a/public/css/menu.css
+++ b/public/css/menu.css
@@ -3,3 +3,17 @@
     height: 15vw;
     object-fit: cover;
 }
+
+@media screen and (max-width: 580px) {
+    .card-img-top {
+        width: 100%;
+        height: 150px;
+        object-fit: cover;
+    }
+    .container {
+        align-items: center;
+    }
+    .row {
+        text-align: center;
+    }
+}
