--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,3 +1,9 @@
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: o;
+}
+
 .bg-image {
     background: url(/images/bgmain.jpg);
     background-size: cover;
@@ -7,8 +13,9 @@
     justify-content: center;
     align-items: center;
     color: black;
-    width: 100vw;
-    height: 91vh;
+    width: 100%;
+    height: 92vh;
+    margin-right: 0px;
 }
 
 .center-text {
@@ -25,5 +32,65 @@
     }
     .center-text h2 {
         font-size: 20px;
+    }
+}
+
+.img1 {
+    width: 250px;
+    height: 200px;
+    background: url(/images/indian.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.img2 {
+    width: 250px;
+    height: 200px;
+    background: url(/images/italian.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.img3 {
+    width: 250px;
+    height: 200px;
+    background: url(/images/mexican.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.img4 {
+    width: 250px;
+    height: 200px;
+    background: url(/images/chinese.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.speciality {
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+    width: 100%;
+    /* height: 200px; */
+    background-color: #fff2de;
+}
+
+.cards {
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+}
+
+.card-box p {
+    font-size: 20px;
+}
+
+@media screen and (max-width: 580px) {
+    .speciality {
+        display: flex;
+        flex-direction: column;
+        padding: 10px;
+        width: 100%;
     }
 }
