--- a/views/main/home.ejs
+++ b/views/main/home.ejs
@@ -26,7 +26,29 @@
                 <h2>Dine with best forget the Rest</h2>
             </div>
         </div>
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        <div class="speciality text-center">
+            <h2>Our Specialities</h2>
+            <div class="cards">
+                <div class="card-box">
+                    <div class="img1"></div>
+                    <p>Indian</p>
+                </div>
+                <div class="card-box">
+                    <div class="img2"></div>
+                    <p>Italian</p>
+                </div>
+                <div class="card-box">
+                    <div class="img3"></div>
+                    <p>Chinese</p>
+                </div>
+                <div class="card-box">
+                    <div class="img4"></div>
+                    <p>Mexican</p>
+                </div>
+            </div>
+        </div>
+
+        <script src=" https://code.jquery.com/jquery-3.5.1.slim.min.js"
             integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
             crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
