--- a/public/css/home.css
+++ b/public/css/home.css
@@ -16,6 +16,7 @@
     width: 100%;
     height: 92vh;
     margin-right: 0px;
+    background-attachment: fixed;
 }
 
 .center-text {
@@ -84,6 +85,32 @@
 
 .card-box p {
     font-size: 20px;
+}
+
+.address {
+    width: 20%;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.location {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.map {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 100%;
+    padding: 20px;
+}
+
+.google-map {
+    width: 80%;
 }
 
 @media screen and (max-width: 580px) {
