--- a/views/main/home.ejs
+++ b/views/main/home.ejs
@@ -47,7 +47,19 @@
                 </div>
             </div>
         </div>
-
+        <div class="location">
+            <h2>Location</h2>
+            <div class="map">
+                <div class="address">
+                    <p>New Link Rd, Phase D, Oshiwara, Andheri West, Mumbai, Maharashtra 400053</p>
+                </div>
+                <div class="google-map">
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3769.2343194674972!2d72.82871771437782!3d19.141217754894573!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7c83c05b7fc89%3A0x324fb542f69a0e2e!2sInfiniti%20Mall!5e0!3m2!1sen!2sin!4v1630418155829!5m2!1sen!2sin"
+                        width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                </div>
+            </div>
+        </div>
         <script src=" https://code.jquery.com/jquery-3.5.1.slim.min.js"
             integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
             crossorigin="anonymous"></script>
