--- a/views/main/home.ejs
+++ b/views/main/home.ejs
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="/css/style.css">
     <!-- home.css -->
     <link rel="stylesheet" href="/css/home.css">
-    <title>Rean Restaurant</title>
+    <title>Prabhusha Restaurant</title>
 </head>
 
 <body>
@@ -22,7 +22,7 @@
         <!-- Navbar End -->
         <div class="bg-image">
             <div class="center-text">
-                <h1>Rean Restaurant</h1>
+                <h1>Prabhusha Restaurant</h1>
                 <h2>Dine with best forget the Rest</h2>
             </div>
         </div>
